--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,7 @@
     <app-portfolio></app-portfolio>
     <app-contact></app-contact>
     <app-footer></app-footer>
+    <app-inprint></app-inprint>
     <router-outlet></router-outlet>
+  
   </div>
