--- a/src/app/first-section/first-section.component.scss
+++ b/src/app/first-section/first-section.component.scss
@@ -1,5 +1,3 @@
-
-
 .first-section {
     background-color: #141D2F;
     height: 85vh;
@@ -16,7 +14,7 @@
 }
 
 
-a{
+a {
     color: white;
     text-decoration: none;
 }
@@ -45,33 +43,34 @@ a{
     flex-direction: column;
 }
 
-.btn {
+.button {
     color: white;
     z-index: 900;
     border: none;
     margin-top: 50px;
-    margin-left: 200px;
+    margin-left: 125px;
     max-width: 170px;
     font-size: 30px;
     border-radius: 10px;
     padding: 12px;
     background-color: #1CDAE6;
     cursor: pointer;
-
-
 }
 
-.btn:hover {
+
+
+.button:hover {
     background-color: #4441E5;
     scale: 1.1;
 
 }
 
+
 .right-section {
     padding-left: 670px;
     padding-right: 100px;
     padding-bottom: 150px;
-    
+
     // margin-right: 100px;
     display: flex;
     justify-content: center;
@@ -81,9 +80,12 @@ a{
     .name {
         color: white;
         padding-left: 20px;
-       
         font-size: 53px;
     }
+}
+
+.button.deutsch {
+    max-width: 240px;
 }
 
 .front-end-developer {
@@ -155,8 +157,10 @@ a{
 }
 
 .vertikal.deutsch {
-    font-size: 40px; /* Größe für das Element, wenn die Sprache auf Deutsch ist */
-  }
+    font-size: 28px;
+    /* Größe für das Element, wenn die Sprache auf Deutsch ist */
+    padding-top: 120px;
+}
 
 .line {
     height: 4px;
@@ -172,14 +176,14 @@ a{
     z-index: 15;
 }
 
-a{
-    >img{
+a {
+    >img {
         width: 40px;
         height: 40px;
         padding-left: 24px;
         cursor: pointer;
 
-        &:hover{
+        &:hover {
             scale: 1.2;
         }
     }
@@ -212,108 +216,109 @@ a{
 
 
 
-@media screen and (max-width: 1380px){
-    .right-section{
-        padding-left: 550px;
+@media screen and (max-width: 1380px) {
+    .right-section {
+        padding-left: 600px;
     }
 
-    
+
 }
 
-@media screen and (max-width: 1330px){
-    .name{
-        font-size: 50px!important;
+@media screen and (max-width: 1330px) {
+    .name {
+        font-size: 50px !important;
     }
 
-    .front-end-developer{
+    .front-end-developer {
         font-size: 38px;
     }
 
-    .btn{
+    .button {
         margin-left: 100px;
     }
 }
 
 
-@media screen and (max-width: 1220px){
-    .right-section{
+@media screen and (max-width: 1220px) {
+    .right-section {
         padding-left: 560px;
     }
 }
 
-@media screen and (max-width: 1200px){
-    .right-section{
+@media screen and (max-width: 1200px) {
+    .right-section {
         padding-top: 700px;
         padding-left: 20%;
         z-index: 99;
         padding-bottom: 200px;
         padding-right: 0;
     }
-   
 
-    .name{
-        padding-left: 0!important;
+
+    .name {
+        padding-left: 0 !important;
     }
-    .column{
+
+    .column {
         width: 400px;
     }
 
-    .btn{
+    .button {
         margin-top: 5px;
     }
 
-    .contact{
+    .contact {
         bottom: -110px;
     }
-   
-    .background{
+
+    .background {
         height: 235px;
         bottom: 97px;
     }
-    
-    a{
-        >img{
+
+    a {
+        >img {
             width: 50px;
             height: 50px;
             padding-left: 48px;
             cursor: pointer;
-    
-            &:hover{
+
+            &:hover {
                 scale: 1.2;
             }
         }
     }
 
-    .e-mail{
+    .e-mail {
         display: none;
     }
 
-    .line{
+    .line {
         width: 300px;
     }
 
-    .my-profile{
+    .my-profile {
         width: 70%;
         padding-left: 15%;
         object-fit: cover;
         padding-bottom: 50px;
     }
 
-    .behind_the_picture{
-       width: 80%;
+    .behind_the_picture {
+        width: 80%;
         padding-left: 10%;
         padding-top: -250px;
     }
 
-    .scroll-down-vertikal{
+    .scroll-down-vertikal {
         display: none;
     }
 
-    .first-section{
-        padding-bottom: 200px;
+    .first-section {
+        padding-bottom: 50px;
     }
 
-    .vertikal{
+    .vertikal {
         padding-left: 55px;
         font-size: 41px;
         padding-top: 80px;
@@ -321,189 +326,209 @@ a{
         writing-mode: initial;
     }
 
-   .front-end-developer{
-    padding-left: 0;
-   }
+    .vertikal.deutsch {
+        margin-top: -25px;
+        padding-top: 100px;
+    }
 
-   .name{
-    padding-left: 0;
-   }
+    .front-end-developer {
+        padding-left: 0;
+    }
+
+    .name {
+        padding-left: 0;
+    }
 }
 
 @media screen and (max-width: 1030px) {
-   
 
-    .right-section{
+
+    .right-section {
         padding-left: 15%;
     }
 
-    
+
 }
 
-@media screen and (max-width: 900px){
-    
-    .my-profile{
+@media screen and (max-width: 900px) {
+
+    .my-profile {
         padding-left: 10%;
     }
 
-    .right-section{
+    .right-section {
         padding-left: 5%;
     }
 
-   
+
 }
 
-@media screen and (max-width: 760px){
-    
+@media screen and (max-width: 760px) {
 
-    .line{
+
+    .line {
         width: 100px;
     }
 
-   .right-section{
-    padding-left: 2%;
-   }
+    .right-section {
+        padding-left: 2%;
+    }
 
-   
-   
+
+
 }
 
-@media screen and (max-width:700px){
-    .my-profile{
+@media screen and (max-width:700px) {
+    .my-profile {
         width: 85%;
         padding-left: 5%;
     }
 }
-@media screen and (max-width: 660px){
-    .btn{
+
+@media screen and (max-width: 660px) {
+    .button {
         margin-left: 50px;
     }
 
-    .vertikal{
+    .vertikal {
         font-size: 25px;
-        margin-top: -17px!important;
+        margin-top: -17px !important;
         margin-right: 0;
         width: 56px;
     }
 
-    .name{
-        font-size: 40px!important;
+    .vertikal.deutsch {
+        width: 100px;
+        margin-top: -84px !important;
+        font-size: 20px;
     }
 
-    .front-end-developer{
+    .name {
+        font-size: 40px !important;
+    }
+
+    .front-end-developer {
         font-size: 30px;
     }
 
-    .btn{
+    .button {
         margin-top: 20px;
     }
 
-   
+
 }
 
-@media screen and (max-width:580px){
-   
+@media screen and (max-width:580px) {
 
-    .vertikal{
-       padding-left: 60px;
-       margin-top: -15px !important;
-       margin-right: -40px !important;
-       padding-top: 0;
+
+    .vertikal {
+        padding-left: 60px;
+        margin-top: -15px !important;
+        margin-right: -40px !important;
+        padding-top: 0;
     }
 
-    
+    .vertikal.deutsch {
+        padding-top: 0;
+        margin-left: -17px;
+    }
+
+
 }
 
-@media screen and (max-width: 566px){
-  
+@media screen and (max-width: 566px) {
 
-    .my-profile{
+
+    .my-profile {
         width: 100%;
         padding-left: 0;
     }
 
-    .column{
+    .column {
         max-width: 350px;
     }
-    
+
 }
 
 
 
 
-@media screen and (max-width:500px){
-    .my-profile{
+@media screen and (max-width:500px) {
+    .my-profile {
         height: 100%;
         top: 120px;
         padding-left: 0;
     }
 
-    a{
-        >img{
-            width: 35px;
-            height: 35px;
-            padding-left: 24px;
-            
-        }
-    }
-}
-
-@media screen and (max-width:460px){
-    .right-section{
-        padding-left: 0;
-    }
-
-    .column{
+    .column {
         max-width: 300px;
     }
 
-    .name{
-        font-size: 32px!important;
+    a {
+        >img {
+            width: 35px;
+            height: 35px;
+            padding-left: 24px;
+        }
     }
 
-    .front-end-developer{
+    .name {
+        font-size: 32px !important;
+    }
+}
+
+@media screen and (max-width:460px) {
+    .right-section {
+        padding-left: 0;
+    }
+
+    .column {
+        max-width: 300px;
+    }
+
+
+
+    .front-end-developer {
         font-size: 26px;
     }
 }
 
-@media screen and (max-width:440px){
-    .vertikal{
+@media screen and (max-width:440px) {
+    .vertikal {
         margin-left: -15%;
     }
 
-    .name{
-        font-size: 38px!important;
+    .name {
+        font-size: 38px !important;
     }
 
-    .front-end-developer{
-        font-size: 30px!important;
+    .front-end-developer {
+        font-size: 30px !important;
     }
 }
 
-@media screen and (max-width:400px){
+@media screen and (max-width:400px) {
 
-    .my-profile{
+    .my-profile {
         height: 92%;
     }
-    .name{
-        font-size: 32px!important;
+
+    .name {
+        font-size: 32px !important;
     }
 
-    .front-end-developer{
-        font-size: 24px!important;
+    .front-end-developer {
+        font-size: 24px !important;
     }
 
-    .column{
+    .column {
         max-width: 250px;
     }
 
-    .btn{
+    .button {
         margin-left: 40px;
     }
 }
 
 
-@media screen and (max-width:380px){
-  
-
-}
+@media screen and (max-width:380px) {}
