--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -22,7 +22,7 @@
             </a>
         </div>
 
-        <a class=" mobile-section" href="#">Impressum</a>
+        <a (click)="inprint($event)" class="mobile-section" href="">Impressum</a>
     </div>
 
 
