--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -166,6 +166,7 @@ a{
     .my-skills-section {
         flex-direction: column-reverse;
         justify-content: center;
+        padding-top: 50px;
     }
 
     .hide-mobile{
@@ -206,20 +207,23 @@ a{
         padding-right: 25px;
         justify-content: center;
     }
-
-
-
-
 }
 
+@media screen and (max-width: 700px){
+    h1{
+        font-size: 64px;
+    }
+}
 @media screen and (max-width: 550px) {
     .skills-container {
         font-size: 18px;
 
 
     }
+}
 
+@media screen and (max-width: 500px) {
     h1 {
-        font-size: 60px;
+        font-size: 40px;
     }
 }
