--- a/src/app/agb/agb.component.scss
+++ b/src/app/agb/agb.component.scss
@@ -1,4 +1,4 @@
-.inprint-content{
+.agb-content{
     margin-top: 50px;
     color: white;
     position: relative;
@@ -32,9 +32,8 @@ a{
     opacity: 1;
 }
 
-
 @media screen and (max-width:950px){
-    .inprint-content{
+    .agb-content{
         padding-left: 25px;
         padding-right: 25px;
     }
