--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -21,6 +21,10 @@ h1 {
     font-size: 88px;
 }
 
+h1.deutsch{
+    font-size: 60px;
+}
+
 .content {
     display: flex;
     padding-bottom: 100px;
@@ -336,6 +340,12 @@ textarea::placeholder {
     }
 }
 
+@media screen and (max-width: 1200px) {
+    h1.deutsch{
+        font-size: 80px;
+    }
+}
+
 @media screen and (max-width:1100px) {
     .contact-info {
         width: 55%;
@@ -386,6 +396,10 @@ textarea::placeholder {
     h1{
         font-size: 64px;
     }
+
+    h1.deutsch{
+        font-size: 64px;
+    }
 }
 @media screen and (max-width:630px) {
     h2 {
@@ -408,6 +422,9 @@ textarea::placeholder {
         font-size: 40px;
     }
 
+    h1.deutsch{
+        font-size: 40px;
+    }
     h2 {
         font-size: 26px;
     }
