--- a/src/app/first-section/first-section.component.scss
+++ b/src/app/first-section/first-section.component.scss
@@ -1,16 +1,54 @@
-.first-section {
+.content {
+    max-width: 1440px;
+    position: relative;
     background-color: #141D2F;
     height: 85vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    
+}
+
+.left-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
+    width: 45%;
+    height: 100%;
+    /* Passende Höhe festlegen */
+}
+
+
+
+.my-profile {
+    z-index: 3;
+    width: 100%;
+    height: auto;
+}
+
+.behind_the_picture {
+    position: absolute;
+    /* Damit es hinter dem Profilbild bleibt */
+    z-index: 1;
+    width: 100%;
+    height: auto;
+
+}
+
+.right-content {
+    margin-top: 100px;
+    width: 55%;
+    z-index: 3;
     display: flex;
 }
 
 .background {
     position: absolute;
     width: 100%;
-    height: 300px;
-    bottom: -150px;
-    z-index: 1;
+    top: 130px;
+    z-index: 2;
 }
 
 
@@ -19,28 +57,10 @@ a {
     text-decoration: none;
 }
 
-
-.my-profile {
-    position: absolute;
-    margin-left: 0px;
-    margin-top: -250px;
-    height: 1000px;
-    z-index: 2;
-    // width: 500px;
-}
-
-.behind_the_picture {
-    position: absolute;
-    z-index: 1;
-    // top: -50px;
-    // left: 0px;
-    height: 700px;
-    width: 700px;
-}
-
 .column {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .button {
@@ -48,7 +68,6 @@ a {
     z-index: 900;
     border: none;
     margin-top: 50px;
-    margin-left: 125px;
     max-width: 170px;
     font-size: 30px;
     border-radius: 10px;
@@ -59,40 +78,26 @@ a {
 
 
 
+
+
 .button:hover {
     background-color: #4441E5;
     scale: 1.1;
 
 }
 
+.name {
+    color: white;
 
-.right-section {
-    padding-left: 670px;
-    padding-right: 100px;
-    padding-bottom: 150px;
-
-    // margin-right: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    // background-color: red;
-
-    .name {
-        color: white;
-        padding-left: 20px;
-        font-size: 53px;
-    }
+    font-size: 53px;
 }
 
-.button.deutsch {
-    max-width: 240px;
-}
 
 .front-end-developer {
     color: #4441E5;
 
     font-size: 40px;
-    padding-left: 22px;
+
 }
 
 .scroll-down-vertikal {
@@ -143,23 +148,14 @@ a {
 
 .vertikal {
     color: white;
-
-    font-size: 60px;
-    padding-top: 80px;
-    // margin-right: 0;
+    font-size: 48px;
+    margin-top: 130px;
     writing-mode: vertical-lr;
-    /* Vertikaler Schreibmodus von links nach rechts */
     text-orientation: mixed;
-    /* Mischung von vertikaler und horizontaler Ausrichtung */
     display: inline-block;
     transform: rotate(180deg);
-    /* Drehen des Textes um 180 Grad */
-}
-
-.vertikal.deutsch {
-    font-size: 28px;
-    /* Größe für das Element, wenn die Sprache auf Deutsch ist */
-    padding-top: 120px;
+    transform-origin: center top;
+    /* Ursprungspunkt Mitte oben */
 }
 
 .line {
@@ -193,7 +189,6 @@ a {
 .contact {
     position: absolute;
     bottom: 40px;
-    margin-right: 15px;
     display: flex;
     z-index: 99;
 
@@ -214,321 +209,438 @@ a {
     cursor: pointer;
 }
 
-
-
-@media screen and (max-width: 1380px) {
-    .right-section {
-        padding-left: 600px;
+@media screen and (max-width:1100px) {
+    .content {
+        flex-direction: column;
+        height: auto;
     }
 
-
-}
-
-@media screen and (max-width: 1330px) {
-    .name {
-        font-size: 50px !important;
-    }
-
-    .front-end-developer {
-        font-size: 38px;
-    }
-
-    .button {
-        margin-left: 100px;
-    }
-}
-
-
-@media screen and (max-width: 1220px) {
-    .right-section {
-        padding-left: 560px;
-    }
-}
-
-@media screen and (max-width: 1200px) {
-    .right-section {
-        padding-top: 700px;
-        padding-left: 20%;
-        z-index: 99;
-        padding-bottom: 200px;
-        padding-right: 0;
-    }
-
-
-    .name {
-        padding-left: 0 !important;
-    }
-
-    .column {
-        width: 400px;
-    }
-
-    .button {
-        margin-top: 5px;
-    }
-
-    .contact {
-        bottom: -110px;
-    }
-
-    .background {
-        height: 235px;
-        bottom: 97px;
-    }
-
-    a {
-        >img {
-            width: 50px;
-            height: 50px;
-            padding-left: 48px;
-            cursor: pointer;
-
-            &:hover {
-                scale: 1.2;
-            }
-        }
-    }
-
-    .e-mail {
-        display: none;
-    }
-
-    .line {
-        width: 300px;
-    }
-
-    .my-profile {
-        width: 70%;
-        padding-left: 15%;
-        object-fit: cover;
-        padding-bottom: 50px;
-    }
-
-    .behind_the_picture {
-        width: 80%;
-        padding-left: 10%;
-        padding-top: -250px;
-    }
-
-    .scroll-down-vertikal {
-        display: none;
-    }
-
-    .first-section {
-        padding-bottom: 50px;
-    }
-
-    .vertikal {
-        padding-left: 55px;
-        font-size: 41px;
-        padding-top: 80px;
-        transform: rotate(270deg);
-        writing-mode: initial;
-    }
-
-    .vertikal.deutsch {
-        margin-top: -25px;
-        padding-top: 100px;
-    }
-
-    .front-end-developer {
-        padding-left: 0;
-    }
-
-    .name {
-        padding-left: 0;
-    }
-}
-
-@media screen and (max-width: 1030px) {
-
-
-    .right-section {
-        padding-left: 15%;
-    }
-
-
-}
-
-@media screen and (max-width: 900px) {
-
-    .my-profile {
-        padding-left: 10%;
-    }
-
-    .right-section {
-        padding-left: 5%;
-    }
-
-
-}
-
-@media screen and (max-width: 760px) {
-
-
-    .line {
-        width: 100px;
-    }
-
-    .right-section {
-        padding-left: 2%;
-    }
-
-
-
-}
-
-@media screen and (max-width:700px) {
-    .my-profile {
-        width: 85%;
-        padding-left: 5%;
-    }
-}
-
-@media screen and (max-width: 660px) {
-    .button {
-        margin-left: 50px;
-    }
-
-    .vertikal {
-        font-size: 25px;
-        margin-top: -17px !important;
-        margin-right: 0;
-        width: 56px;
-    }
-
-    .vertikal.deutsch {
-        width: 100px;
-        margin-top: -84px !important;
-        font-size: 20px;
-    }
-
-    .name {
-        font-size: 40px !important;
-    }
-
-    .front-end-developer {
-        font-size: 30px;
-    }
-
-    .button {
-        margin-top: 20px;
-    }
-
-
-}
-
-@media screen and (max-width:580px) {
-
-
-    .vertikal {
-        padding-left: 60px;
-        margin-top: -15px !important;
-        margin-right: -40px !important;
-        padding-top: 0;
-    }
-
-    .vertikal.deutsch {
-        padding-top: 0;
-        margin-left: -17px;
-    }
-
-
-}
-
-@media screen and (max-width: 566px) {
-
-
-    .my-profile {
+    .left-content {
         width: 100%;
-        padding-left: 0;
+        height: 40vh;
     }
 
-    .column {
-        max-width: 350px;
+    .my-profile{
+        width: 50%;
     }
 
-}
-
-
-
-
-@media screen and (max-width:500px) {
-    .my-profile {
-        height: 100%;
-        top: 120px;
-        padding-left: 0;
+    .scroll-down-vertikal{
+        display: none;
     }
 
-    .column {
-        max-width: 300px;
+    .right-content{
+        width: 100%;
+        display: flex;
+        justify-content: center;
     }
 
-    a {
-        >img {
-            width: 35px;
-            height: 35px;
-            padding-left: 24px;
-        }
+    .behind_the_picture{
+        width: 50%;
+        margin-top: 160px;
+        z-index: 1;
     }
 
-    .name {
-        font-size: 32px !important;
+    .contact{
+        bottom: -108px;
+        left: 100px;
+    }
+
+    .button{
+        margin-top: 0;
     }
 }
 
-@media screen and (max-width:460px) {
-    .right-section {
-        padding-left: 0;
+@media screen and (max-width:950px){
+    .contact{
+        left:25px
     }
 
-    .column {
-        max-width: 300px;
+    .e-mail{
+        display: none;
+    }
+}
+
+@media screen and (max-width:900px){
+    .my-profile{
+        max-width: 63%;
+        min-width: 500px;
     }
 
+    .behind_the_picture{
+        max-width: 63%;
+        min-width: 500px;
+    }
+}
 
+@media screen and (max-width:600px){
+    .name{
+        font-size: 40px;
+    }
 
-    .front-end-developer {
+    .front-end-developer{
+        font-size: 32px;
+    }
+
+    .vertikal{
+        font-size: 36px;
+        margin-top: 101px;
+    }
+}
+
+@media screen and (max-width:550px){
+    .my-profile{
+        min-width: 100%;
+    }
+
+    .behind_the_picture{
+        min-width: 100%;
+    }
+
+    .right-content{
+        margin-top: 55px;
+    }
+
+    .left-content{
+        height: 50vh;
+    }
+}
+
+@media screen and (max-width:450px){
+    .name{
+        font-size: 32px;
+    }
+
+    .front-end-developer{
         font-size: 26px;
     }
-}
 
-@media screen and (max-width:440px) {
-    .vertikal {
-        margin-left: -15%;
+    .vertikal{
+        font-size: 28px;
+        margin-top: 79px;
     }
 
-    .name {
-        font-size: 38px !important;
+    .button{
+        margin-top: 16px;
     }
 
-    .front-end-developer {
-        font-size: 30px !important;
-    }
-}
-
-@media screen and (max-width:400px) {
-
-    .my-profile {
-        height: 92%;
-    }
-
-    .name {
-        font-size: 32px !important;
-    }
-
-    .front-end-developer {
-        font-size: 24px !important;
-    }
-
-    .column {
-        max-width: 250px;
-    }
-
-    .button {
-        margin-left: 40px;
+    .line{
+        width: 66px;
     }
 }
 
+// @media screen and (max-width: 1380px) {
+//     .right-section {
+//         padding-left: 600px;
+//     }
 
-@media screen and (max-width:380px) {}
+
+// }
+
+// @media screen and (max-width: 1330px) {
+//     .name {
+//         font-size: 50px !important;
+//     }
+
+//     .front-end-developer {
+//         font-size: 38px;
+//     }
+
+//     .button {
+//         margin-left: 100px;
+//     }
+// }
+
+
+// @media screen and (max-width: 1220px) {
+//     .right-section {
+//         padding-left: 560px;
+//     }
+// }
+
+// @media screen and (max-width: 1200px) {
+//     .right-section {
+//         padding-top: 700px;
+//         padding-left: 20%;
+//         z-index: 99;
+//         padding-bottom: 200px;
+//         padding-right: 0;
+//     }
+
+
+//     .name {
+//         padding-left: 0 !important;
+//     }
+
+//     .column {
+//         width: 400px;
+//     }
+
+//     .button {
+//         margin-top: 5px;
+//     }
+
+//     .contact {
+//         bottom: -110px;
+//     }
+
+//     .background {
+//         height: 235px;
+//         bottom: 97px;
+//     }
+
+//     a {
+//         >img {
+//             width: 50px;
+//             height: 50px;
+//             padding-left: 48px;
+//             cursor: pointer;
+
+//             &:hover {
+//                 scale: 1.2;
+//             }
+//         }
+//     }
+
+//     .e-mail {
+//         display: none;
+//     }
+
+//     .line {
+//         width: 300px;
+//     }
+
+//     .my-profile {
+//         width: 70%;
+//         padding-left: 15%;
+//         object-fit: cover;
+//         padding-bottom: 50px;
+//     }
+
+//     .behind_the_picture {
+//         width: 80%;
+//         padding-left: 10%;
+//         padding-top: -250px;
+//     }
+
+//     .scroll-down-vertikal {
+//         display: none;
+//     }
+
+//     .first-section {
+//         padding-bottom: 50px;
+//     }
+
+//     .vertikal {
+//         padding-left: 55px;
+//         font-size: 41px;
+//         padding-top: 80px;
+//         transform: rotate(270deg);
+//         writing-mode: initial;
+//     }
+
+//     .vertikal.deutsch {
+//         margin-top: -25px;
+//         padding-top: 100px;
+//     }
+
+//     .front-end-developer {
+//         padding-left: 0;
+//     }
+
+//     .name {
+//         padding-left: 0;
+//     }
+// }
+
+// @media screen and (max-width: 1030px) {
+
+
+//     .right-section {
+//         padding-left: 15%;
+//     }
+
+
+// }
+
+// @media screen and (max-width: 900px) {
+
+//     .my-profile {
+//         padding-left: 10%;
+//     }
+
+//     .right-section {
+//         padding-left: 5%;
+//     }
+
+
+// }
+
+// @media screen and (max-width: 760px) {
+
+
+//     .line {
+//         width: 100px;
+//     }
+
+//     .right-section {
+//         padding-left: 2%;
+//     }
+
+
+
+// }
+
+// @media screen and (max-width:700px) {
+//     .my-profile {
+//         width: 85%;
+//         padding-left: 5%;
+//     }
+// }
+
+// @media screen and (max-width: 660px) {
+//     .button {
+//         margin-left: 50px;
+//     }
+
+//     .vertikal {
+//         font-size: 25px;
+//         margin-top: -17px !important;
+//         margin-right: 0;
+//         width: 56px;
+//     }
+
+//     .vertikal.deutsch {
+//         width: 100px;
+//         margin-top: -84px !important;
+//         font-size: 20px;
+//     }
+
+//     .name {
+//         font-size: 40px !important;
+//     }
+
+//     .front-end-developer {
+//         font-size: 30px;
+//     }
+
+//     .button {
+//         margin-top: 20px;
+//     }
+
+
+// }
+
+// @media screen and (max-width:580px) {
+
+
+//     .vertikal {
+//         padding-left: 60px;
+//         margin-top: -15px !important;
+//         margin-right: -40px !important;
+//         padding-top: 0;
+//     }
+
+//     .vertikal.deutsch {
+//         padding-top: 0;
+//         margin-left: -17px;
+//     }
+
+
+// }
+
+// @media screen and (max-width: 566px) {
+
+
+//     .my-profile {
+//         width: 100%;
+//         padding-left: 0;
+//     }
+
+//     .column {
+//         max-width: 350px;
+//     }
+
+// }
+
+
+
+
+// @media screen and (max-width:500px) {
+//     .my-profile {
+//         height: 100%;
+//         top: 120px;
+//         padding-left: 0;
+//     }
+
+//     .column {
+//         max-width: 300px;
+//     }
+
+//     a {
+//         >img {
+//             width: 35px;
+//             height: 35px;
+//             padding-left: 24px;
+//         }
+//     }
+
+//     .name {
+//         font-size: 32px !important;
+//     }
+// }
+
+// @media screen and (max-width:460px) {
+//     .right-section {
+//         padding-left: 0;
+//     }
+
+//     .column {
+//         max-width: 300px;
+//     }
+
+
+
+//     .front-end-developer {
+//         font-size: 26px;
+//     }
+// }
+
+// @media screen and (max-width:440px) {
+//     .vertikal {
+//         margin-left: -15%;
+//     }
+
+//     .name {
+//         font-size: 38px !important;
+//     }
+
+//     .front-end-developer {
+//         font-size: 30px !important;
+//     }
+// }
+
+// @media screen and (max-width:400px) {
+
+//     .my-profile {
+//         height: 92%;
+//     }
+
+//     .name {
+//         font-size: 32px !important;
+//     }
+
+//     .front-end-developer {
+//         font-size: 24px !important;
+//     }
+
+//     .column {
+//         max-width: 250px;
+//     }
+
+//     .button {
+//         margin-left: 40px;
+//     }
+// }
+
+
+// @media screen and (max-width:380px) {}
