--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -5,6 +5,7 @@ footer {
     color: white;
     padding-left: 100px;
     padding-right: 100px;
+    position: relative;
 }
 
 .content {
@@ -42,6 +43,14 @@ h2 {
     color: #1CDAE6;
 }
 
+.bottom-line {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: #1CDAE6;
+}
 
 a {
     text-decoration: none;
