--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -40,6 +40,10 @@ h1 {
     color: white;
 }
 
+h1.deutsch{
+    font-size: 60px;
+}
+
 .short-line {
    
     background-color: #4441E5;
@@ -222,6 +226,10 @@ h3 {
         padding-left: 0;
     }
 
+    h1.deutsch{
+        font-size: 80px;
+    }
+
     .development-section.reverse {
         flex-direction: column;
         align-items: center;
@@ -305,7 +313,11 @@ h3 {
     }
 
     h1 {
-        font-size: 74px;
+        font-size: 60px;
+    }
+
+    h1.deutsch{
+        font-size: 60px;
     }
 
     
@@ -350,7 +362,11 @@ h3 {
     }
 
     h1 {
-        font-size: 50px;
+        font-size: 40px;
+    }
+
+    h1.deutsch{
+        font-size: 40px;
     }
 
    
